--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Stephen weds Sherly</title>
+  <title>Sweetson Weds Hepziba </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -106,9 +106,9 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h1 class="margin" id="candle" style="font-size:90px">Stephen Sherly</h1>
-  <img src="images/cc.png" class="img-responsive  margin" style="display:inline" alt="Bird" width="350" height="350"><br />
-  <img src="images/saveTheDate.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <h1 class="margin" id="candle" style="font-size:90px">Sweetson  Hepziba</h1>
+  <img src="https://i.postimg.cc/0yD8RkP8/logo.png" class="img-responsive  margin" style="display:inline" alt="Bird" width="350" height="350"><br />
+  <img src="https://i.postimg.cc/KY5xj01w/Sweetson.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
 
 </div>
 
@@ -126,11 +126,11 @@
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-1 text-center">    
  <!--Google map-->
- <div class="container-fluid bg-1 text-center">
+<!--  <div class="container-fluid bg-1 text-center">
   <img src="images/duke.jpeg" class="img-responsive margin" style="display:inline" alt="Bird" width="90%">
 
 
-</div>
+</div> -->
 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
     
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998164.1187799368!2d76.63955534608453!3d11.997715145402195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba859a5184f96a7%3A0xdb7b03453e4e69c2!2sCSI%20ALL%20SOULS%E2%80%99%20CHURCH!5e0!3m2!1sen!2sin!4v1573478412947!5m2!1sen!2sin" 
@@ -138,7 +138,7 @@
         height="50%" 
         frameborder="0" 
         style="border:0;" allowfullscreen=""></iframe>
-  </div>
+      </div>
  
   
   <!--Google Maps-->
@@ -152,7 +152,7 @@ const second = 1000,
       hour = minute * 60,
       day = hour * 24;
 
-let countDown = new Date('Jan 09, 2020 17:06:00').getTime(),
+let countDown = new Date('May 27, 2022 17:06:00').getTime(),
     x = setInterval(function() {
 
       let now = new Date().getTime(),
